# geospatial-tools-mcp

./: Dockerfile  README.md  pyproject.toml  server.py
