[project]
name = "geospatial-tools-mcp"
version = "0.1.0"
description = "MCP server providing geospatial utilities: coordinate transforms, spatial validation, elevation sampling, viewshed analysis, and drone flight planning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pyproj>=3.6.0",
    "shapely>=2.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
geospatial-tools = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
